Assign Shortcut Missing when Right Clicking Undo History. #97431
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#97431
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71
Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash:
cc66d1020c
Worked: Blender 3.0 Unsure of exact version I had installed but I was not on 3.1.
Changed in
0e1bb232e6
Short description of error
Unable to assign shortcut to Undo History using Right Click Menu.
Right Click Menu only shows "Assign to Quick Favorites"
Exact steps for others to reproduce the error
Using default startup file, Edit > Right Click Undo History
I recently had my OS SSD fail and had to reinstall Windows as well as all my applications fresh. Going through my setup of a new install of Blender 3.1.2 I wanted to reassign my previous shortcut for the Undo History Menu (Ctrl + Alt + Z) but was unable to view the Assign Shortcut option when right clicking.
Undo History was also missing from the "Blender" Keymap when searching.
To resolve this, I switched to the Blender 2.7X Keymap which did have the Undo History shortcut, copied the shortcut "ed.undo_history" and assigned that manually in the default "Blender" Keymap.
Added subscriber: @Casi-1
#102946 was marked as duplicate of this issue
Added subscribers: @ideasman42, @PratikPB2123
Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Thanks for the report.
Assigning shortcut to menus is not possible I think.
This was changed in
0e1bb232e6
@ideasman42 , can you take a look?
Added subscriber: @Alphyn
I was just going to report this. I always map Undo History to Ctrl+Alt+Z, but now the dropdown option that made it possible to create the shortcut is missing.
It's still possible to create a custom key binding in the Window category and use the
python command to summon the old Undo History operator. New users or less tech-savvy users have no conceivable way of figuring it out.
In fact, with how useful the Undo History is, I would suggest that Ctrl+Alt+Z should be set as the default shortcut for the Undo History.
Using the list is always mode convenient and preferable that just pressing Ctrl+Z repeatedly. Many other software have dedicated history windows, e.g. Photoshop.
I see no reason why it shouldn't have it's own shortcut in Blender, especially considering it had a shortcut in 2.7 and the key combination is not used for anything in 3.1.
Added subscriber: @Rusculleda
Agree with Alphyn 100%. Undo history is too useful not to have or be able to set a shortcut for it in a straight forward way.
Added subscriber: @FraYoshi-2
Considering the number of duplicates, I think we can confirm this issue. It seems handy to add a shortcut to bring back the Undo History menu as it was before commit
0e1bb232e6
@ideasman42 hi, can we backport this to 3.3 and 3.6?
@PratikPB2123 yes.