source/blender/editors/interface/interface_context_menu.c
@@ -102,6 +102,24 @@ static const char *shortcut_get_operator_property(bContext *C, uiBut *but, IDPro
     }
   }
 
+  MenuType *mt = UI_but_menutype_get(but);
+  if (mt) {
+    const IDPropertyTemplate val = {0};
+    IDProperty *prop = IDP_New(IDP_GROUP, &val, __func__);
+    IDP_AddToGroup(prop, IDP_NewString(mt->idname, "name", sizeof(mt->idname)));
+    *r_prop = prop;
+    return "WM_OT_call_menu";
+  }
+
+  PanelType *pt = UI_but_paneltype_get(but);
+  if (pt) {
+    const IDPropertyTemplate val = {0};
+    IDProperty *prop = IDP_New(IDP_GROUP, &val, __func__);
+    IDP_AddToGroup(prop, IDP_NewString(pt->idname, "name", sizeof(pt->idname)));
+    *r_prop = prop;
+    return "WM_OT_call_panel";
+  }
+
   *r_prop = NULL;
   return NULL;
 }
